Agregando encabeado y estilo a la pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Mi Portfolio</title>
   </head>
   <body>
-    <h1>Mi Portfolio</h1>
+    <header>
+      <h1>Gonzalez Joaquin Nahuel</h1>
+      <h2>Programador</h2>
+    </header>
   </body>
 </html>
