Agrego seccion de Datos Personales

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
       <h1>Gonzalez Joaquin Nahuel</h1>
       <h2>Programador</h2>
     </header>
+    <section>
+      <h3>Datos Personales</h3>
+      <p><strong>Lugar de nacimiento:</strong> La Rioja - Argentina</p>
+      <p><strong>Telefono:</strong> 3804447520</p>
+      <p><strong>Email:</strong> joaquinnahuel1993@gmail.com</p>
+      <p><strong>DNI:</strong> 37.187.435</p>
+    </section>
   </body>
 </html>
