Se agregan habilidades al portfolio y el estilo a la seccion

--- a/index.html
+++ b/index.html
@@ -18,5 +18,25 @@
       <p><strong>Email:</strong> joaquinnahuel1993@gmail.com</p>
       <p><strong>DNI:</strong> 37.187.435</p>
     </section>
+    <section>
+      <h3>Habilidades</h3>
+      <ul>
+        <li>Conocimiento en manejo e instalaciones de Software</li>
+        <li>Manejo de Excel avanzado</li>
+        <li>Manejo de Word avanzado</li>
+        <li>Manejo de PowerPoint avanzado</li>
+        <li>
+          Manejo de Herramientas Multimedia (Producción y edición de videos e
+          imágenes)
+        </li>
+        <li>Manejo de Redes Sociales</li>
+        <li>Trabajo en grupo</li>
+        <li>Adaptabilidad</li>
+        <li>Planificación</li>
+        <li>Gestión</li>
+        <li>Organización</li>
+        <li>Coordinación</li>
+      </ul>
+    </section>
   </body>
 </html>
