Se agrega la seccion de experiencia laboral, aplicando clase para darle un estilo distinto en Css

--- a/index.html
+++ b/index.html
@@ -38,5 +38,27 @@
         <li>Coordinación</li>
       </ul>
     </section>
+    <section class="experiencia-laboral">
+      <h3>Experiencia Laboral</h3>
+      <p>
+        <strong
+          >Administrativo en Ministerio de Desarrollo, Igualdad e Integración
+          Social</strong
+        >
+        (2017 – 2025)
+      </p>
+      <ul>
+        <li>
+          Integración de herramientas de Google como Formularios y Sheets para
+          carga de datos.
+        </li>
+        <li>
+          Desarrollo y utilización de macros en VBA para automatizar procesos.
+        </li>
+        <li>Sincronización y manejo de datos en Google Drive.</li>
+        <li>Experiencia en logística y asistencia en diversas zonas.</li>
+        <li>Conocimiento detallado de barrios de La Rioja Capital.</li>
+      </ul>
+    </section>
   </body>
 </html>
