Se agrega la seccion Formacion academica

--- a/index.html
+++ b/index.html
@@ -60,5 +60,23 @@
         <li>Conocimiento detallado de barrios de La Rioja Capital.</li>
       </ul>
     </section>
+    <section class="formacion-academica">
+      <h3>Formación Académica</h3>
+      <ul>
+        <li>
+          Estudiante de Tecnicatura Universitaria en Programación - UTN <br />
+          (actualmente cursando 2do año)
+        </li>
+        <li>
+          Técnico en equipos e instalaciones electromecánicas <br />
+          Título obtenido en Colegio Secundario EPET Nº2 Brigadier Gral. Juan
+          Facundo Quiroga - Egresado en año 2010
+        </li>
+        <li>
+          Licenciatura en Sistemas de Información <br />
+          (cursado incompleto 2do año)
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
