Se agregó la experiencia relevante y estilo propio

--- a/index.html
+++ b/index.html
@@ -78,5 +78,20 @@
         </li>
       </ul>
     </section>
+    <section class="experiencia-relevante">
+      <h3>Experiencia Relevante</h3>
+      <ul>
+        <li>
+          En cuanto al manejo de tecnologías, he desarrollado un pequeño
+          programa utilizando el lenguaje Python y utilizando la herramienta
+          PyQt6, para la compra y venta de boletos de un cine.
+        </li>
+        <li>
+          Actualmente me estoy especializando en el desarrollo de aplicaciones y
+          sitios web utilizando HTML, CSS y JavaScript, así como en la creación
+          de interfaces dinámicas y responsivas con React.
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
