Se modificó el encabezado

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Mi Portfolio</title>
   </head>
   <body>
-    <header>
-      <h1>Gonzalez Joaquin Nahuel</h1>
-      <h2>Programador</h2>
+    <header class="encabezado">
+      <div class="contenido">
+        <h1>Hola, soy <span class="amarillo">Joaquin Nahuel Gonzalez</span></h1>
+        <h2>Programador</h2>
+        <p>
+          Desarrollador apasionado por el software y la tecnología. Estudiante
+          en constante aprendizaje, con experiencia en herramientas modernas.
+        </p>
+        <div class="botones">
+          <a href="#contacto" class="btn">Contactarme</a>
+          <a href="#proyectos" class="btn btn-secundario">Ver proyectos</a>
+        </div>
+      </div>
     </header>
+
     <section>
       <h3>Datos Personales</h3>
       <p><strong>Lugar de nacimiento:</strong> La Rioja - Argentina</p>
