Agrego una pagina externa llamada formacion.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </div>
       </div>
     </header>
+    <nav>
+      <a href="formacion.html">Formación Académica</a>
+    </nav>
 
     <section>
       <h3>Datos Personales</h3>
