Se agregó una seccion nueva de cursos completados

--- a/formacion.html
+++ b/formacion.html
@@ -16,11 +16,52 @@
       <h3>Formación Académica</h3>
       <ul>
         <li>
-          Técnico en Programación – Universidad Nacional de La Rioja (En curso)
+          Técnico en Programación - Universidad Nacional de La Rioja (En curso)
         </li>
         <li>
-          Bachiller en Ciencias Sociales y Humanidades – Colegio N°2 Joaquín V.
+          Bachiller en Ciencias Sociales y Humanidades - Colegio N°2 Joaquín V.
           González (2011)
+        </li>
+      </ul>
+    </section>
+    <section class="cursos">
+      <h3>Cursos Completados</h3>
+      <ul>
+        <li>
+          <strong>Programación desde Cero: Lógica y Algoritmos</strong><br />
+          Udemy - 12 horas<br />
+          Curso enfocado en el desarrollo del pensamiento lógico y la resolución
+          de problemas utilizando pseudocódigo y ejercicios prácticos.
+        </li>
+        <li>
+          <strong
+            >Desarrollo Web Completo con HTML, CSS, JavaScript y React</strong
+          ><br />
+          Udemy - 40 horas<br />
+          Formación integral para construir sitios web modernos desde cero,
+          aplicando HTML5, CSS3, JavaScript y React.js.
+        </li>
+        <li>
+          <strong
+            >JavaScript Moderno: Guía Completa desde Principiante hasta
+            Junior</strong
+          ><br />
+          Udemy - 30 horas<br />
+          Explora JavaScript moderno (ES6+), manejo del DOM, eventos, funciones
+          asincrónicas, promesas y consumo de APIs con fetch.
+        </li>
+        <li>
+          <strong>React.js desde Cero: Hooks, Router y Consumo de APIs</strong
+          ><br />
+          Udemy - 25 horas<br />
+          Curso práctico para desarrollar aplicaciones con React, usando
+          componentes funcionales, Hooks, y React Router.
+        </li>
+        <li>
+          <strong>Git y GitHub: Control de Versiones desde Cero</strong><br />
+          Udemy - 6 horas<br />
+          Gestión de versiones con Git, manejo de ramas, commits y trabajo
+          colaborativo en GitHub.
         </li>
       </ul>
     </section>
