Modifico los nombres, estilo y posicion de la pagina formacion.hmtl

--- a/formacion.html
+++ b/formacion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Formación Académica</title>
+    <title>Formación y Cursos</title>
   </head>
   <body>
     <header>
       <h1>Gonzalez Joaquin Nahuel</h1>
-      <h2>Formación Académica</h2>
+      <h2>Formación y Cursos</h2>
     </header>
 
     <section class="formacion">
