--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <div class="contenido">
         <h1>Hola, soy <span class="amarillo">Joaquin Nahuel Gonzalez</span></h1>
         <h2>Programador</h2>
+        <div>
+          <a href="formacion.html">Formación y Cursos</a>
+        </div>
         <p>
           Desarrollador apasionado por el software y la tecnología. Estudiante
           en constante aprendizaje, con experiencia en herramientas modernas.
@@ -21,10 +24,6 @@
         </div>
       </div>
     </header>
-    <nav>
-      <a href="formacion.html">Formación Académica</a>
-    </nav>
-
     <section>
       <h3>Datos Personales</h3>
       <p><strong>Lugar de nacimiento:</strong> La Rioja - Argentina</p>
