Agrego imagen y estilo de centrado al encabezado y posicion a la imagen en style.css

--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
   <body>
     <header class="encabezado">
       <div class="contenido">
-        <h1>Hola, soy <span class="amarillo">Joaquin Nahuel Gonzalez</span></h1>
-        <h2>Programador</h2>
-        <div>
-          <a href="formacion.html">Formación y Cursos</a>
+        <div class="imagen">
+          <img
+            src="joaquin-nahuel.jpeg"
+            alt="Foto de Joaquin"
+            class="imagen-perfil"
+          />
         </div>
-        <p>
-          Desarrollador apasionado por el software y la tecnología. Estudiante
-          en constante aprendizaje, con experiencia en herramientas modernas.
-        </p>
-        <div class="botones">
-          <a href="#contacto" class="btn">Contactarme</a>
-          <a href="#proyectos" class="btn btn-secundario">Ver proyectos</a>
+        <div class="texto">
+          <h1>Hola, soy <span class="amarillo">Joaquin Nahuel Gonzalez</span></h1>
+          <h2>Programador</h2>
+          <div>
+            <a href="formacion.html">Formación y Cursos</a>
+          </div>
+          <p>
+            Desarrollador apasionado por el software y la tecnología. Estudiante
+            en constante aprendizaje.
+          </p>
+          <div class="botones">
+            <a href="#contacto" class="btn">Contactarme</a>
+            <a href="#proyectos" class="btn btn-secundario">Ver proyectos</a>
+          </div>
+        </div>
+      </div>
         </div>
       </div>
     </header>
