Se agrega estilo de botones al acceso a la pagina formacion.hmtl

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <div class="texto">
           <h1>Hola, soy <span class="amarillo">Joaquin Nahuel Gonzalez</span></h1>
           <h2>Programador</h2>
-          <div>
-            <a href="formacion.html">Formación y Cursos</a>
+          <div class="enlace-formacion">
+            <a href="formacion.html" class="btn">Formación y Cursos</a>
           </div>
+          
           <p>
             Desarrollador apasionado por el software y la tecnología. Estudiante
             en constante aprendizaje.
