Se agregan detalles y estilos a la pagina

--- a/formacion.html
+++ b/formacion.html
@@ -16,22 +16,23 @@
       <h3>Formación Académica</h3>
       <ul>
         <li>
-          Técnico en Programación - Universidad Nacional de La Rioja (En curso)
-        </li>
-        <li>
-          Bachiller en Ciencias Sociales y Humanidades - Colegio N°2 Joaquín V.
-          González (2011)
+          Técnicatura Universitaria en Programación - Universidad Nacional de La
+          Rioja (En curso)
         </li>
       </ul>
     </section>
     <section class="cursos">
-      <h3>Cursos Completados</h3>
+      <h3>Tecnologías</h3>
       <ul>
         <li>
-          <strong>Programación desde Cero: Lógica y Algoritmos</strong><br />
-          Udemy - 12 horas<br />
-          Curso enfocado en el desarrollo del pensamiento lógico y la resolución
-          de problemas utilizando pseudocódigo y ejercicios prácticos.
+          <strong>React.js desde Cero: Hooks, Router y Consumo de APIs</strong>
+          <br />
+          Desarrollo de aplicaciones con React, usando componentes funcionales,
+          Hooks, y React Router.
+        </li>
+        <li>
+          <strong>Base de Datos</strong><br />
+          Mongo DB - SQL<br />
         </li>
         <li>
           <strong
@@ -42,24 +43,15 @@
           aplicando HTML5, CSS3, JavaScript y React.js.
         </li>
         <li>
-          <strong
-            >JavaScript Moderno: Guía Completa desde Principiante hasta
-            Junior</strong
-          ><br />
-          Udemy - 30 horas<br />
-          Explora JavaScript moderno (ES6+), manejo del DOM, eventos, funciones
-          asincrónicas, promesas y consumo de APIs con fetch.
+          <strong>Programación desde Cero: Lógica y Algoritmos</strong><br />
+          Udemy - 12 horas<br />
+          Curso enfocado en el desarrollo del pensamiento lógico y la resolución
+          de problemas utilizando pseudocódigo y ejercicios prácticos.
         </li>
+
         <li>
-          <strong>React.js desde Cero: Hooks, Router y Consumo de APIs</strong
-          ><br />
-          Udemy - 25 horas<br />
-          Curso práctico para desarrollar aplicaciones con React, usando
-          componentes funcionales, Hooks, y React Router.
-        </li>
-        <li>
-          <strong>Git y GitHub: Control de Versiones desde Cero</strong><br />
-          Udemy - 6 horas<br />
+          <strong>Git y GitHub: Control de Versiones desde Cero</strong>
+          <br />
           Gestión de versiones con Git, manejo de ramas, commits y trabajo
           colaborativo en GitHub.
         </li>
