Modificaciones en estilos y agrego un contador a Javascript como demostracion

--- a/formacion.html
+++ b/formacion.html
@@ -12,7 +12,7 @@
       <h2>Formación y Cursos</h2>
     </header>
 
-    <section class="formacion">
+    <section class="formacion revelar">
       <h3>Formación Académica</h3>
       <ul>
         <li>
@@ -21,7 +21,7 @@
         </li>
       </ul>
     </section>
-    <section class="cursos">
+    <section class="cursos revelar">
       <h3>Tecnologías</h3>
       <ul>
         <li>
