Se agrega y modifican archivos index y formacion

--- a/formacion.html
+++ b/formacion.html
@@ -31,8 +31,9 @@
           Hooks, y React Router.
         </li>
         <li>
-          <strong>Base de Datos</strong><br />
-          Mongo DB - SQL<br />
+          <strong>Base de Datos NoSQL:</strong><br />
+
+          Mongo DB
         </li>
         <li>
           <strong
