--- a/index.html
+++ b/index.html
@@ -188,12 +188,14 @@
             <strong>JavaScript</strong>
             <i class="fas fa-hand-point-up"></i>
           </span>
+          clickea
           <div id="contador-container" class="contador-container">
             <button id="decrementar" class="contador-btn">-</button>
             <span id="contador" class="contador">0</span>
             <button id="incrementar" class="contador-btn">+</button>
           </div>
         </li>
+        <li>Bases de Datos NoSQL: Mongo DB</li>
       </ul>
     </section>
     <script src="https://unpkg.com/scrollreveal"></script>
